modify sliding immages

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 					
 					<img src="./static/img/slide-photo_0.jpg" class="slideshow-img">
 					<div class="slideshow-text std-roses">
-						<h1>Standard Roses</h1>
+						<h1>Supplier of Cut Flowers</h1>
 						<p>
-							Single bloom on single stem
+							across the globe
 						</p>	
 					</div>
 				</div>
