modify at-the-top contacts

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <body>
 	<header id="header">
 		<div class="container-support">
+			<a href="#">+254723461740</a>
+			<a href="#">floreabloms@gmail.com</a>
 			<a href="#" target="_blank">Instagram</a>
 			<a href="#" target="_blank">Facebook</a>
 			
@@ -172,7 +174,8 @@
 				
 				<h2>Dedicated Team</h2>
 				<p>
-					From Field production to Sales and shipping, our teams are ever dedicated to delivering fresh high qality cut flowers to the world.
+					From Field production to Sales and shipping, 
+					our teams are ever dedicated to delivering fresh high quality flowers to the world.
 				</p>
 			</div>
 			<div class="box-showcase">
