modify at-the-top contacts

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 	<header id="header">
 		<div class="container-support">
-			<a href="#">+254723461740</a>
+			<a href="#">+254 723 461740 / +254 726 266090</a>
 			<a href="#">floreabloms@gmail.com</a>
 			<a href="#" target="_blank">Instagram</a>
 			<a href="#" target="_blank">Facebook</a>
