modify media queries

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
 	<header id="header">
 		<div class="container-support">
-			<a href="#">+254 723 461740 / +254 726 266090</a>
-			<a href="#">floreabloms@gmail.com</a>
-			<a href="#" target="_blank">Instagram</a>
-			<a href="#" target="_blank">Facebook</a>
+			<a href="#" class="phone_cont">+254 792 188324</a>
+			<a href="#" class="email_cont">floreabloms@gmail.com</a>
+			<a href="#" class="instagram_cont" target="_blank">Instagram</a>
+			<a href="#" class="facebook_cont" target="_blank">Facebook</a>
 			
 		</div>
 		<div class="container-header">
@@ -42,10 +42,10 @@
 				<div class="slideshow">
 					
 					<img src="./static/img/slide-photo_0.jpg" class="slideshow-img">
-					<div class="slideshow-text std-roses">
-						<h1>Supplier of Cut Flowers</h1>
+					<div class="slideshow-text florea-slogan">
+						<h1>SUPPLIER OF CUT FLOWERS</h1>
 						<p>
-							across the globe
+							ACROSS THE GLOBE
 						</p>	
 					</div>
 				</div>
