--- a/index.html
+++ b/index.html
@@ -9,14 +9,43 @@
     <link rel="icon" href="./static/img/floreabloomsicon.png">
 	<link rel="stylesheet" type="text/css" href="./static/css/main.css">
 	<link rel="stylesheet" type="text/css" href="./static/css/responsive_topnav.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+	<!-- Social media styling -->
+	<style>
+		.fa {
+			padding: 20px;
+			font-size: 30px;
+			width: 30px;
+			text-align: center;
+			text-decoration: none;
+			margin: 5px 2px;
+			border-radius: 0%;
+		}
+	
+		.fa:hover {
+			opacity: 0.7;
+		}
+	
+		.fa-facebook {
+			background: #3B5998;
+			color: white;
+		}
+
+		.fa-instagram {
+			background: #125688;
+			color: white;
+		}
+
+	</style>
 </head>
 <body>
 	<header id="header">
 		<div class="container-support">
 			<a href="#" class="phone_cont">+254 792 188324</a>
 			<a href="#" class="email_cont">floreabloms@gmail.com</a>
-			<a href="#" class="instagram_cont" target="_blank">Instagram</a>
-			<a href="#" class="facebook_cont" target="_blank">Facebook</a>
+			<a href="#" class="instagram_cont fa fa-instagram" target="_blank"></a>
+			<a href="#" class="facebook_cont fa fa-facebook" target="_blank"></a>
 			
 		</div>
 		<div class="container-header">
@@ -43,9 +72,9 @@
 					
 					<img src="./static/img/slide-photo_0.jpg" class="slideshow-img">
 					<div class="slideshow-text florea-slogan">
-						<h1>SUPPLIER OF CUT FLOWERS</h1>
+						<h1>Supplier of cut flowers</h1>
 						<p>
-							ACROSS THE GLOBE
+							ACROSS . THE . GLOBE
 						</p>	
 					</div>
 				</div>
@@ -346,9 +375,8 @@
 			<p>
 				Florea Blooms<br>
 				JKIA, Nairobi Kenya,<br>
-				floreabloms@gmail.com &nbsp;|&nbsp;<br>
-				
-				+254723461740 &nbsp;|&nbsp; +254723461740<br>
+				floreabloms@gmail.com &nbsp;&nbsp;<br>				
+				+254 792 188 324 &nbsp;|| &nbsp; +254 726 876 947<br>
 			</p>
 		</div>
 		<hr>
