--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
 			<p>
 				Florea Blooms<br>
 				JKIA, Nairobi Kenya,<br>
-				floreabloms@gmail.com &nbsp;&nbsp;<br>				
+				floreablooms@gmail.com &nbsp;&nbsp;<br>				
 				+254 792 188 324 &nbsp;|| &nbsp; +254 726 876 947<br>
 			</p>
 		</div>
