Change theme colour to jungle green

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		</div>
 		<div class="container-header">
 			<div id="logo-image">
-				<a href="index.html"> <img src="./static/img/logos/florea_logo_preview_11.jpg"></a>
+				<a href="index.html"> <img src="./static/img/logos/florea_logo_preview_17.png"></a>
 			</div>
 			<div corporate-name>
 				<h4>Florea Blooms</h4>
